--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "framer-motion": "^10.15.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "zustand": "^4.5.5"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10"
   }
 }
