--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "daisyui": "^4.12.10"
+    "daisyui": "^4.12.10",
+    "gh-pages": "^6.1.1"
   }
 }
